# solver-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  REAMDE.md  benchmark_results.csv  boot.sh  docker-compose.yml  filter-benchmarks.py  filter-benchmarks.sh  pytest.ini  requirements.txt  ruff.toml  tracemalloc_benchmark_test_result.csv  vms_gcloud.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
Sample problems/: README.md  solver_benchmark_pypsa_eur.py
benchmarks/: README.md  _template_metadata.yaml  benchmark_config.yaml  categorize_benchmarks.py  config.campaign.default.yaml  create_benchmark_campaign.py  environment.yaml  (+7 more)
notebooks/: README.md  allocate-benchmarks-to-vms.ipynb  analyze-hipo-results.ipynb  analyze-hipo-runs.ipynb  analyze_runtime_discrepancies_v2.ipynb  benchmark-runner-quickstart.ipynb  highs-hipo-analysis.ipynb  highs-key-insights.ipynb  highs_hipo_analysis_summary.csv  higs-hipo-runs.ipynb  hipo_blog_post.ipynb  hipo_blog_post__metadata_pypsa.yaml  metadata-pypsa-de-elec-uc.yaml  metadata-pypsa-de-sec.yaml  metadata_pypsa.yaml  pyproject.toml  results_by_problem_size.ipynb  run-and-analyze.ipynb  run-and-observe-benchmarks.ipynb  run-benchmark.ipynb  run-highs-hipo-pypsa-de.ipynb  run-highs-hipo.ipynb  run-hipo-pypsa-sizes.ipynb  run-pypsa-de-uc-sizes.ipynb  run-pypsa-sizes.ipynb  run-v2.ipynb  run_commercial_solvers.ipynb  run_mosek.ipynb  solver_runtime_by_spatial_resolution.ipynb  state_of_all_solvers.ipynb  state_of_solvers.ipynb  vm-allocation.ipynb
(+729 files in other folders)
